--- a/config/kong.yaml
+++ b/config/kong.yaml
@@ -19,3 +19,21 @@ services:
                 local updated_body = raw_body:gsub("Sept", "Sep")
                 kong.service.request.set_raw_body(updated_body)
               end
+    
+    # This route IS rate-limited to 5 requests per minute.
+   - name: limited-route
+     paths:
+     - /limited
+     strip_path: false
+     plugins:
+     - name: rate-limiting
+       config:
+         second: 2
+         policy: local # 'local' policy stores counters in memory on each node
+
+    # This route has NO rate limit applied.
+   - name: unlimited-route
+     paths:
+     - /unlimited
+     strip_path: false
+
